--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 body {
   background: #f6f6f6;
   color: #333;
-  font-family: "Nunito";
+  font-family: 'Open Sans', sans-serif;  
   margin: 0;
 }
 a {
@@ -14,16 +14,12 @@ a {
   margin: 0 auto;
 }
 nav {
-  margin: 10px auto;
+  margin: 10px auto 3px;
   max-width: 1280px;
   padding: 10px;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-}
-nav a {
-  margin-left: 10px;
-  margin-right: 10px
 }
 nav .logo {
   margin-right: auto;
