--- a/comps/Navbar.module.css
+++ b/comps/Navbar.module.css
@@ -5,6 +5,7 @@
 
 .navbarLink:hover {
     background-color: rgba(112, 135, 198, .4);
+    transition: all linear .3s;
 }
 
 .navbarLink:active {
@@ -12,12 +13,15 @@
 }
 
 .seperator {
-    margin-bottom: 2px;
-    font-size: 27px;
+    margin-bottom: 1px;
+    font-size: 29px;
     color: #ddd;
 }
 
 .navbarLinks {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
     border-radius: 5px;
     padding: 0 10px 5px;
     border-bottom: 1px solid #ddd;
