--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,14 +5,47 @@
   margin: 0 auto;
   border-top: 1px solid #ddd;
 }
+
+.homeContainer:hover {
+  background: rgba(255,255,255,.9);
+  transition: all linear .3s;
+}
+
+.columnsHolder {
+  display: flex;
+  justify-content: space-between;
+}
+
+.columnL {
+  display: inline-block;
+  width: 60%;
+}
+
+.columnS {
+  display: inline-block;
+  width: 35%;
+}
+
+
 .title {
   color: #333;
-  padding-bottom: 20px;
+  padding: 0 20px 5px;
   text-align: center;
+  border-bottom: 1px solid #333;
+  width: fit-content;
+  margin: 10px auto;
 }
 .text {
   color: #333;
 }
+
+.text::first-letter {
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #000;
+  margin-left: 1.3rem;
+}
+
 .btn {
   display: block;
   width: 150px;
@@ -39,6 +72,13 @@
 @media screen and (max-width: 600px) {
   .homeContainer {
     padding: 20px;
+  }
+  .columnsHolder {
+    flex-direction: column;
+  }
+  .columnL, .columnS {
+    display: block;
+    width: 100%;
   }
 }
 
