--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,11 +28,17 @@ footer {
   display: block;
   text-align: center;
   padding: 30px 0;
-  margin: 60px auto;
+  margin: 10px auto 60px;
   color: #777;
   border-top: 1px solid #eaeaea;
   max-width: 1280px;
 }
+
+footer p {
+  text-align: left;
+  margin: 3px 0;
+}
+
 .not-found {
   text-align: center;
 }
