--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,6 +29,7 @@
 
 .title {
   color: #333;
+  letter-spacing: .3px;
   padding: 0 20px 5px;
   text-align: center;
   border-bottom: 1px solid #333;
