--- a/comps/Navbar.module.css
+++ b/comps/Navbar.module.css
@@ -4,18 +4,12 @@
 }
 
 .navbarLink:hover {
-    background-color: rgba(112, 135, 198, .4);
+    border-bottom: 1px solid #4979ff;
     transition: all linear .3s;
 }
 
 .navbarLink:active {
     background-color: #4979ff;
-}
-
-.seperator {
-    margin-bottom: 1px;
-    font-size: 29px;
-    color: #ddd;
 }
 
 .navbarLinks {
@@ -26,3 +20,9 @@
     padding: 0 10px 5px;
     border-bottom: 1px solid #ddd;
 }
+
+@media screen and (max-width: 900px) {
+    .navbarLink {
+        padding: 5px;
+    }
+  }
