--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,48 +1,47 @@
 .contactContainer {
-    padding: 20px 60px;
-    background: rgba(255,255,255);
-    max-width: 1280px;
-    margin: 0 auto;
-    border-top: 1px solid #ddd;
+  padding: 20px 60px 30px;
+  background: #fcfcfc;
+  max-width: 1024px;
+  margin: 10px auto 0;
+  border-top: 1px solid #ddd;
+  border-radius: 15px 60px 15px 60px;
+}
+
+.contactInfo {
+  display: inline-block;
+  width: 40%;
+}
+
+.contactInfo a:hover {
+  color: #7087C6;
+}
+  
+.title {
+  color: #333;
+  letter-spacing: .3px;
+  padding: 0 20px 5px;
+  text-align: center;
+  width: fit-content;
+  margin: 0 auto 10px;
+}
+
+.underscore {
+  width: fit-content;
+  padding-right: 9px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #333;
+}
+
+@media screen and (max-width: 1300px) {
+  .contactContainer {
+    max-width: 960px;
   }
+}
   
-  .columnsHolder {
-    display: flex;
-    justify-content: space-between;
+@media screen and (max-width: 600px) {
+  .contactContainer {
+    padding: 20px;
   }
-  
-  .columnL {
-    display: inline-block;
-    width: 60%;
-  }
-  
-  .columnS {
-    display: inline-block;
-    width: 35%;
-  }
-  
-  
-  .title {
-    color: #333;
-    letter-spacing: .3px;
-    padding: 0 20px 5px;
-    text-align: center;
-    border-bottom: 1px solid #333;
-    width: fit-content;
-    margin: 10px auto;
-  }
-  
-  
-  @media screen and (max-width: 1300px) {
-    .contactContainer {
-      max-width: 960px;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .contactContainer {
-      padding: 20px;
-    }
-  }
+}
   
   
