--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,9 @@
 .homeContainer {
   padding: 20px 60px;
-  background: rgba(255,255,255,.2);
-  max-width: 1280px;
+  background: #fcfcfc;
+  max-width: 1024px;
   margin: 0 auto;
   border-top: 1px solid #ddd;
-}
-
-.homeContainer:hover {
-  background: rgba(255,255,255,.9);
-  transition: all linear .3s;
 }
 
 .columnsHolder {
@@ -58,7 +53,7 @@
   text-align: center;
 }
 .background {  
-  min-width: 100vw;
+  min-width: 100%;
   background-size: cover;
   background-image: url('/bridge2.png');
   border-radius: 30px;
