--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 body {
-  background: #fcfcfd;
+  background: #ededed;
   color: #333;
   font-family: 'Open Sans', sans-serif;  
   font-size: 13px;
@@ -15,8 +15,8 @@ a {
   margin: 0 auto;
 }
 nav {
-  margin: 10px auto 3px;
-  max-width: 1280px;
+  margin: 3px auto;
+  max-width: 1024px;
   padding: 10px;
   display: flex;
   justify-content: flex-end;
@@ -28,11 +28,11 @@ nav .logo {
 footer {
   display: block;
   text-align: center;
-  padding: 30px 0;
+  padding: 30px 10px;
   margin: 10px auto 60px;
   color: #777;
   border-top: 1px solid #eaeaea;
-  max-width: 1280px;
+  max-width: 1024px;
 }
 
 footer p {
