--- a/comps/Navbar.module.css
+++ b/comps/Navbar.module.css
@@ -21,8 +21,68 @@
     border-bottom: 1px solid #bbb;
 }
 
+.languageOptions {
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100px;
+    padding: 2px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.languageOptions:hover {
+    background-color: #9cadde;
+}
+
+.languageOptions_svg {
+    width: 20px;
+    height: 20px;
+}
+
+.languageList {
+    position: absolute;
+    top: 36px;
+    left: 0;
+    background-color: #ddd;
+    width: 100px;
+    padding: 0;
+}
+
+.languageList p {
+    background-color: #ddd;
+    margin: 0;
+    padding: 10px;
+    width: 100px;
+}
+
+.languageList p:hover {
+    background-color: #fff;
+    transition: all ease-in-out .2s;
+
+}
+
+.langDisplay {
+    margin: 0;
+    padding: 0;
+}
+
+.langDisplay p {
+    margin: 0;
+    padding: 0;
+}
+
+.langBorder {
+    border-top: 1px solid #acacac
+}
+
 @media screen and (max-width: 900px) {
     .navbarLink {
         padding: 5px;
     }
-  }
+}
