--- a/comps/Navbar.module.css
+++ b/comps/Navbar.module.css
@@ -1,6 +1,7 @@
 .navbarLink {
     padding: 5px 10px;
     border-radius: 5px;
+    margin-right: 5px;
 }
 
 .navbarLink:hover {
@@ -17,20 +18,21 @@
     justify-content: flex-end;
     align-items: flex-end;
     border-radius: 5px;
-    padding: 0 10px 5px;
+    padding: 5px 10px 0;
+    margin-bottom: 3px;
     border-bottom: 1px solid #bbb;
 }
 
 .languageOptions {
-    position: absolute;
-    top: 5px;
-    right: 30px;
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 100px;
+    width: 90px;
     padding: 2px 10px;
+    margin-left: 10px;
+    margin-bottom: 3px;
     border-radius: 5px;
     font-size: 12px;
     cursor: pointer;
@@ -50,7 +52,7 @@
     top: 36px;
     left: 0;
     background-color: #ddd;
-    width: 100px;
+    width: 90px;
     padding: 0;
 }
 
@@ -58,7 +60,7 @@
     background-color: #ddd;
     margin: 0;
     padding: 10px;
-    width: 100px;
+    width: 90px;
 }
 
 .languageList p:hover {
@@ -84,5 +86,14 @@
 @media screen and (max-width: 900px) {
     .navbarLink {
         padding: 5px;
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .languageOptions {
+        position: absolute;
+        top: 3px;
+        right: 3px; 
     }
 }
