--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,7 +1,7 @@
 .aboutContainer {
     padding: 20px 60px;
     max-width: 1024px;
-    margin: 10px auto 0;
+    margin: 0 auto;
     border-top: 1px solid #ddd;
     display: flex;
     flex-direction: row;
