--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,10 +1,21 @@
 .contactContainer {
-  padding: 20px 60px 30px;
   background: #fcfcfc;
+  padding: 20px 60px;
   max-width: 1024px;
-  margin: 10px auto 0;
+  margin: 0 auto;
   border-top: 1px solid #ddd;
   border-radius: 15px 60px 15px 60px;
+}
+
+.aboutContainer {
+  padding: 20px 60px;
+  max-width: 1024px;
+  margin: 0 auto;
+  border-top: 1px solid #ddd;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .contactInfo {
@@ -32,6 +43,10 @@
   border-bottom: 1px solid #333;
 }
 
+.value {
+  float: right;
+}
+
 @media screen and (max-width: 1300px) {
   .contactContainer {
     max-width: 960px;
@@ -41,6 +56,10 @@
 @media screen and (max-width: 600px) {
   .contactContainer {
     padding: 20px;
+  }
+
+  .contactInfo {
+    width: 100%;
   }
 }
   
