--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,9 @@
 .homeContainer {
   padding: 20px 60px;
-  background: #fcfcfc;
+  background: -moz-linear-gradient(90deg, rgba(252,252,252,0.9) 0%, rgba(252,252,252,1) 50%, rgba(252,252,252,1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(252,252,252,0.9) 0%, rgba(252,252,252,1) 50%, rgba(252,252,252,1) 100%);
+  background: linear-gradient(90deg, rgba(252,252,252,0.9) 0%, rgba(252,252,252,1) 50%, rgba(252,252,252,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fcfcfc",endColorstr="#fcfcfc",GradientType=1);
   max-width: 1024px;
   margin: 0 auto;
   border-top: 1px solid #ddd;
@@ -23,7 +26,7 @@
 
 
 .title {
-  color: #333;
+  color: #454545;
   letter-spacing: .3px;
   padding: 0 20px 5px;
   text-align: center;
@@ -55,7 +58,7 @@
 .background {  
   min-width: 100%;
   background-size: cover;
-  background-image: url('/bridge2.png');
+  background-image: url('/bridge.png');
   border-radius: 30px;
 }
 
@@ -65,7 +68,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
   .homeContainer {
     padding: 20px;
   }
