--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,12 +49,28 @@
   display: block;
   width: 150px;
   padding: 8px 0;
-  margin: 20px auto;
+  margin: 0 auto;
   background: #4979ff;
   border-radius: 4px;
   color: white;
   text-align: center;
 }
+
+.linkBlock {
+  border-top: 2px solid #bbb;
+  border-bottom: 2px solid #bbb;
+  margin: 30px 0;
+  padding: 25px 0 35px;
+}
+
+.linkBlock:last-of-type {
+  border-bottom: none;
+}
+
+.linkBlock p {
+  text-align: center;
+}
+
 .background {  
   min-width: 100%;
   background-size: cover;
